--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,11 @@
 
     <title>PasswordKeepR</title>
   </head>
+
+  <header>
+    <h1>PasswordKeepR</h1>
+  </header>
+
   <body>
     <h2>Register</h2>
     <form method="POST" action="/register">
