--- a/public/styles/edit_site.css
+++ b/public/styles/edit_site.css
@@ -31,3 +31,14 @@ text-decoration: underline;
 .random-buttom, .show-user, .show-password, .edit-submit {
   margin-top: 1rem;
 }
+
+.btn {
+  margin: 1rem;
+  color: black;
+  background-color: #5f84a2;
+  border: none;
+ }
+
+ .btn:hover {
+  background-color: #194569;
+ }
