--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -30,7 +30,7 @@
      <div class="website-selection">
      <input type="url" class="form-control" name="website" value="<%=website%>" placeholder="Enter website name" required>
      </div>
-     <ul class="category-list">
+     <ul class="category-list menu">
       <select name="categoryList">
         <option value="1">Entertainment</option>
         <option value="2">Work</option>
@@ -49,7 +49,7 @@
       </div>
      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <button type="submit" class="random-button">Generate Random</button>
+    <button type="submit" class="btn btn-primary random-button">Generate Random</button>
       </div>
   </div>
 
