--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -17,4 +17,11 @@
 
  .btn {
   margin: 1rem;
+  color: black;
+  background-color: #5f84a2;
+  border: none;
+ }
+
+ .btn:hover {
+  background-color: #194569;
  }
