--- a/public/styles/user-page.css
+++ b/public/styles/user-page.css
@@ -66,7 +66,8 @@ font-size: 24px;
 }
 
 .top-row {
-  margin-top: 5rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
 }
@@ -80,3 +81,5 @@ font-size: 24px;
 .hiddenPassword {
   text-align: center;
 }
+
+
