--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <%- include('partials/_header') %>
+
+<head>
+  <%- include('partials/_header') %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Required meta tags -->
@@ -9,55 +10,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
     <link rel="stylesheet" href="/styles/new_site.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <title>PasswordKeepR</title>
-  </head>
+</head>
 
-  <header>
-    <h1>Add New Website</h1>
-  </header>
+<header>
+  <h1>Add New Website</h1>
+</header>
 
-
-  <body>
-    <form method="POST" action="/create">
-      <div class="register-form">
-       <div class="register-block">
-     <label>Website</label>
-     <div class="website-selection">
-     <input type="url" class="form-control" name="website" value="<%=website%>" placeholder="Enter website name" required>
-     </div>
-     <ul class="category-list menu">
-      <select name="categoryList">
-        <option value="1">Entertainment</option>
-        <option value="2">Work</option>
-        <option value="3">Social</option>
-      </select>
-      </ul>
-    </div>
-     <div class="user-info">
+<body>
+  <form method="POST" action="/create">
+    <div class="register-form">
       <div class="register-block">
-     <label>Username</label>
-     <input type="email" class="form-control" name="username" placeholder="Enter email" required>
+        <label>Website</label>
+        <div class="website-selection">
+          <input type="url" class="form-control" name="website" value="<%=website%>" placeholder="Enter website name"
+            required>
+        </div>
+        <ul class="category-list menu">
+          <select name="categoryList">
+            <option value="1">Entertainment</option>
+            <option value="2">Work</option>
+            <option value="3">Social</option>
+          </select>
+        </ul>
       </div>
-      <div class="register-block">
-     <label>Password</label>
-     <input type="text" name="password" class="form-control password-field" placeholder="Enter password" value="" required>
-      </div>
-     <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <button type="submit" class="btn btn-primary random-button">Generate Random</button>
-      </div>
+      <div class="user-info">
+        <div class="register-block">
+          <label>Username</label>
+          <input type="email" class="form-control" name="username" placeholder="Enter email" required>
+        </div>
+        <div class="register-block">
+          <label>Password</label>
+          <input type="text" name="password" class="form-control password-field" placeholder="Enter password" value=""
+            required>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  <button type="submit" class="btn btn-primary random-button">Generate Random</button>
   </div>
+  </div>
+  <!-- Optional JavaScript -->
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
 
-    <!-- Optional JavaScript -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
 </html>
