--- a/views/partials/_categories.ejs
+++ b/views/partials/_categories.ejs
@@ -1,5 +1,6 @@
 <div class="btn-group">
-  <button type="button" class="category-title btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button type="button" class="category-title btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+    aria-expanded="false">
     categories
   </button>
   <div class="dropdown-menu">
