refactor index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 <body>
   <div class="about-section">
     <h2>About</h2>
-    <p>This app will let an authorized user acess all the passwords of the organization. The app will also let a user
+    <p>This app will let an authorized user to acess the password for an organization. The app let a user
       generate a new password for a specific account (just like LastPass). Users will be able to generate a password
       based on the options the form will provide.</p>
   </div>
