--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,16 +30,14 @@
 <body>
   <div class="about-section">
     <h2>About</h2>
-    <p>This app will let an authorized user to acess the password for an organization. The app let a user
-      generate a new password for a specific account (just like LastPass). Users will be able to generate a password
-      based on the options the form will provide.</p>
+    <p>PasswordKeepR is an organizational password manager. Users can generate strong passwords, store them and access them from one location. Now, you only need to remember one master password!</p>
   </div>
   <div class="homepage-button">
     <a href="/login"><button type="submit" class="btn btn-primary btn-1">Login</button></a>
   </div>
-  <div class="homepage-button">
+  <!-- <div class="homepage-button">
     <a href="/register"><button type="submit" class="btn btn-primary btn-1">Register</button></a>
-    <footer></footer>
+    <footer></footer> -->
 
     <body>
       <!-- Optional JavaScript -->
