--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
       </form>
       <% } else {%>
         <div class="push"></div>
-        <li><a href="/login" class="nav-home">login</a></li>
+        <li><a href="/login" class="nav-home">Login</a></li>
         <li><a href="/register" class="nav-home">Register</a></li>
         </div>
         </div>
