--- a/views/partials/_categories.ejs
+++ b/views/partials/_categories.ejs
@@ -1,7 +1,7 @@
 <div class="btn-group">
   <button type="button" class="category-title btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
     aria-expanded="false">
-    categories
+    Categories
   </button>
   <div class="dropdown-menu">
     <a class="dropdown-item" href="/user_page">Favourites</a>
